--- a/SmartTech/Views/Admin/Index.cshtml
+++ b/SmartTech/Views/Admin/Index.cshtml
@@ -15,28 +15,30 @@
 </div>
 
 <div class="row mt-5 tab-content current" id="all">
-    <div class="col-md-10 offset-md-1 mt-1 col-sm-12">
+    <div class="col-md-12 mt-1 col-sm-12">
         <table class="table table-hover table-striped">
-            <thead class="thead-dark">
+            <thead class="thead-light">
             <tr>
                 <th scope="col">First Name</th>
                 <th scope="col">Last Name</th>
                 <th scope="col">Gender</th>
                 <th scope="col">Email</th>
                 <th scope="col">Phone Number</th>
+                <th scope="col">Detail</th>
             </tr>
             </thead>
             <tbody>
             @foreach (var employee in Model.AllEmployees)
             {
                 <tr>
-                    <a asp-action="Detail" asp-route-id="@employee.Id">
+                    
                         <td class="">@employee.FirstName</td>
                         <td class="">@employee.LastName</td>
                         <td class="">@employee.Gender</td>
                         <td class="">@employee.Email</td>
                         <td class="">@employee.PhoneNumber</td>
-                    </a>
+                        <td class=""><a asp-action="Detail" asp-route-id="@employee.Id">View</a></td>
+                    
                 </tr> 
             }
             </tbody>
@@ -45,28 +47,30 @@
 </div>
 
 <div class="row mt-5 tab-content" id="active">
-    <div class="col-md-10 offset-md-1 mt-1 col-sm-12">
+    <div class="col-md-12 mt-1 col-sm-12">
         <table class="table table-hover table-striped">
-            <thead class="thead-dark">
+            <thead class="thead-light">
             <tr>
                 <th scope="col">First Name</th>
                 <th scope="col">Last Name</th>
                 <th scope="col">Gender</th>
                 <th scope="col">Email</th>
                 <th scope="col">Phone Number</th>
+                <th scope="col">Detail</th>
             </tr>
             </thead>
             <tbody>
             @foreach (var employee in Model.ActiveEmployees)
             {
                 <tr>
-                    <a asp-action="Detail" asp-route-id="@employee.Id">
+                    
                         <td class="">@employee.FirstName</td>
                         <td class="">@employee.LastName</td>
                         <td class="">@employee.Gender</td>
                         <td class="">@employee.Email</td>
                         <td class="">@employee.PhoneNumber</td>
-                    </a>
+                        <td class=""><a asp-action="Detail" asp-route-id="@employee.Id">View</a></td>
+                    
                 </tr> 
             }
             </tbody>
@@ -76,28 +80,29 @@
 
 
 <div class="row mt-5 tab-content" id="pending">
-    <div class="col-md-10 offset-md-1 mt-1 col-sm-12">
+    <div class="col-md-12 mt-1 col-sm-12">
         <table class="table table-hover table-striped">
-            <thead class="thead-dark">
+            <thead class="thead-light">
             <tr>
                 <th scope="col">First Name</th>
                 <th scope="col">Last Name</th>
                 <th scope="col">Gender</th>
                 <th scope="col">Email</th>
                 <th scope="col">Phone Number</th>
+                <th scope="col">Detail</th>
             </tr>
             </thead>
             <tbody>
             @foreach (var employee in Model.PendingEmployees)
             {
                 <tr>
-                    <a asp-action="Detail" asp-route-id="@employee.Id">
+                    
                         <td class="">@employee.FirstName</td>
                         <td class="">@employee.LastName</td>
                         <td class="">@employee.Gender</td>
                         <td class="">@employee.Email</td>
                         <td class="">@employee.PhoneNumber</td>
-                    </a>
+                        <td class=""><a asp-action="Detail" asp-route-id="@employee.Id">View</a></td>
                 </tr> 
             }
             </tbody>
