--- a/SmartTech/Views/Account/Edit.cshtml
+++ b/SmartTech/Views/Account/Edit.cshtml
@@ -1,109 +1,114 @@
 ﻿@model SmartTech.Models.Account.EditViewModel
 
 <div class="row my-5 px-5">
-  <div class="col-md-8 order-3 px-5 order-md-1">
-    <h4 class="mb-3">Edit Personal Details</h4>
-    <form method="post" asp-controller="Account" asp-action="Edit" asp-route-id="@Model.Id" id="register" enctype="multipart/form-data">
-      <div asp-validation-summary="All"></div>
-      <div class="row">
-        <div class="col-md-6 mb-3 input-group-sm">
-          <label asp-for="FirstName"></label><span class="text-danger">*</span>
-          <input type="text" asp-for="FirstName" class="form-control" value="@Model.FirstName" id="firstName" required>
-          <span asp-validation-for="FirstName"></span>
-        </div>
-        <div class="col-md-6 mb-3 input-group-sm">
-          <label asp-for="LastName"></label><span class="text-danger">*</span>
-          <input type="text" asp-for="LastName" class="form-control" value="@Model.LastName" id="lastName" required>
-          <span asp-validation-for="LastName"></span>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="mb-3 col-lg-6 col-md-6 col-sm-12">
-          <label asp-for="Email"></label><span class="text-danger">*</span>
-          <div class="input-group-sm input-group">
-            <div class="input-group-prepend">
-              <span class="input-group-text"><i class="fa fa-envelope"></i></span>
-            </div>
-            <input type="text" asp-for="Email" class="form-control" value="@Model.Email" id="email" required>
-            <span asp-validation-for="Email"></span>
+  <div class="col-md-9 order-2 px-5 order-md-1">
+  <div class="card">
+            
+    <h5 class="card-header text-primary" style="height: 40px; padding-top: 8px">Edit Personal Information</h5>
+          
+    <div class="card-body">
+      <form method="post" asp-controller="Account" asp-action="Edit" asp-route-id="@Model.Id" id="register" enctype="multipart/form-data">
+        <div asp-validation-summary="All"></div>
+        <div class="row">
+          <div class="col-md-6 mb-3 input-group-sm">
+            <label asp-for="FirstName"></label><span class="text-danger">*</span>
+            <input type="text" asp-for="FirstName" class="form-control" value="@Model.FirstName" id="firstName" required>
+            <span asp-validation-for="FirstName"></span>
+          </div>
+          <div class="col-md-6 mb-3 input-group-sm">
+            <label asp-for="LastName"></label><span class="text-danger">*</span>
+            <input type="text" asp-for="LastName" class="form-control" value="@Model.LastName" id="lastName" required>
+            <span asp-validation-for="LastName"></span>
           </div>
         </div>
 
-        <div class="mb-3 col-md-6">
-          <label asp-for="PhoneNumber"></label><span class="text-danger">*</span>
-          <div class="input-group-sm input-group">
-            <div class="input-group-prepend">
-              <span class="input-group-text"><i class="fa fa-phone"></i></span>
+        <div class="row">
+          <div class="mb-3 col-lg-6 col-md-6 col-sm-12">
+            <label asp-for="Email"></label><span class="text-danger">*</span>
+            <div class="input-group-sm input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fa fa-envelope"></i></span>
+              </div>
+              <input type="text" asp-for="Email" class="form-control" value="@Model.Email" id="email" required>
+              <span asp-validation-for="Email"></span>
             </div>
-            <input type="text" asp-for="PhoneNumber" class="form-control" value="@Model.PhoneNumber" id="phone" required>
-            <span asp-validation-for="PhoneNumber"></span>
+          </div>
+
+          <div class="mb-3 col-md-6">
+            <label asp-for="PhoneNumber"></label><span class="text-danger">*</span>
+            <div class="input-group-sm input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fa fa-phone"></i></span>
+              </div>
+              <input type="text" asp-for="PhoneNumber" class="form-control" value="@Model.PhoneNumber" id="phone" required>
+              <span asp-validation-for="PhoneNumber"></span>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="mb-3 input-group-sm">
-        <label asp-for="Address"></label><span class="text-danger">*</span>
-        <input type="text" asp-for="Address" class="form-control" value="@Model.Address" id="address" required>
-        <span asp-validation-for="Address"></span>
-      </div>
-
-      <div class="row">
-        <div class="col-md-6 mb-3 input-group-sm">
-          <label asp-for="Gender"></label><span class="text-danger">*</span>
-          <select asp-for="Gender" class="custom-select d-block w-100" id="gender" required>
-            <option value="select">Please Select</option>
-            <option value="Male">Male</option>
-            <option value="Female">Female</option>
-          </select>
-          <span asp-validation-for="Gender"></span>
-        </div>
-        <div class="col-md-6 mb-3 input-group-sm">
-          <label asp-for="MaritalStatus"></label><span class="text-danger">*</span>
-          <select asp-for="MaritalStatus" class="custom-select d-block w-100" id="marital" required>
-            <option value="select">Please Select</option>
-            <option value="Single">Single</option>
-            <option value="Married">Married</option>
-            <option value="Divorced">Divorced</option>
-          </select>
-          <span asp-validation-for="MaritalStatus"></span>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="mb-3 col-md-6 input-group-sm">
-          <label asp-for="BirthDate"></label><span class="text-danger">*</span>
-          <input type="datetime" asp-for="BirthDate" class="form-control datepicker-here" value="@Model.BirthDate.Date" data-language="en" id="birthdate" required>
-          <span asp-validation-for="BirthDate"></span>
+        <div class="mb-3 input-group-sm">
+          <label asp-for="Address"></label><span class="text-danger">*</span>
+          <input type="text" asp-for="Address" class="form-control" value="@Model.Address" id="address" required>
+          <span asp-validation-for="Address"></span>
         </div>
 
-        <div class="mb-3 col-md-6 input-group-sm">
-          <label asp-for="NumberOfChildren"></label>
-          <input asp-for="NumberOfChildren" type="text" class="form-control" value="@Model.NumberOfChildren" id="children">
-          <span asp-validation-for="NumberOfChildren"></span>
-          <span id="childrenerror" class="text-danger hide">Please specify number</span>
+        <div class="row">
+          <div class="col-md-6 mb-3 input-group-sm">
+            <label asp-for="Gender"></label><span class="text-danger">*</span>
+            <select asp-for="Gender" class="custom-select d-block w-100" id="gender" required>
+              <option value="select">Please Select</option>
+              <option value="Male">Male</option>
+              <option value="Female">Female</option>
+            </select>
+            <span asp-validation-for="Gender"></span>
+          </div>
+          <div class="col-md-6 mb-3 input-group-sm">
+            <label asp-for="MaritalStatus"></label><span class="text-danger">*</span>
+            <select asp-for="MaritalStatus" class="custom-select d-block w-100" id="marital" required>
+              <option value="select">Please Select</option>
+              <option value="Single">Single</option>
+              <option value="Married">Married</option>
+              <option value="Divorced">Divorced</option>
+            </select>
+            <span asp-validation-for="MaritalStatus"></span>
+          </div>
         </div>
-      </div>
 
-      <div class="mb-3 input-group-sm">
-        <label asp-for="ProfilePictureUrl"></label>
-        <input type="file" name="ProfilePictureUrl" asp-for="ProfilePictureUrl" class="form-control" id="picture"/>
-        <span asp-validation-for="ProfilePictureUrl"></span>
-      </div>
+        <div class="row">
+          <div class="mb-3 col-md-6 input-group-sm">
+            <label asp-for="BirthDate"></label><span class="text-danger">*</span>
+            <input type="datetime" asp-for="BirthDate" class="form-control datepicker-here" value="@Model.BirthDate.Date" data-language="en" id="birthdate" required>
+            <span asp-validation-for="BirthDate"></span>
+          </div>
 
-      <hr class="mb-4">
-      <button class="btn btn-primary btn-sm btn-block" type="submit">Update</button>
-    </form>
+          <div class="mb-3 col-md-6 input-group-sm">
+            <label asp-for="NumberOfChildren"></label>
+            <input asp-for="NumberOfChildren" type="text" class="form-control" value="@Model.NumberOfChildren" id="children">
+            <span asp-validation-for="NumberOfChildren"></span>
+            <span id="childrenerror" class="text-danger hide">Please specify number</span>
+          </div>
+        </div>
+
+        <div class="mb-3 input-group-sm">
+          <label asp-for="ProfilePictureUrl"></label>
+          <input type="file" name="ProfilePictureUrl" asp-for="ProfilePictureUrl" class="form-control" id="picture" required/>
+          <span asp-validation-for="ProfilePictureUrl"></span>
+        </div>
+
+        <hr class="mb-4">
+        <button class="btn btn-primary btn-sm btn-block" type="submit">Update</button>
+      </form>
+    </div>
+    </div>
   </div>
   
-  <div class="col-md-1 order-2 order-md-2"></div>
   
-  <div class="col-md-3 order-1 order-md-3">
+  <div class="col-md-3 order-1 order-md-2">
     <div class="list-group" id="list-tab" role="tablist">
-      <a class="list-group-item list-group-item-action" href="" role="tab" aria-controls="home">Profile</a>
+      <a class="list-group-item list-group-item-action" asp-action="Profile" asp-route-id="@Model.Id" role="tab" aria-controls="home">Profile</a>
       <a class="list-group-item list-group-item-action" href="" role="tab" aria-controls="profile">Payment History</a>
       <a class="list-group-item list-group-item-action" href="" role="tab" aria-controls="messages">Leave Request</a>
-      <a class="list-group-item list-group-item-action active" data-toggle="list" href="" role="tab" aria-controls="settings">Edit Profile</a>
+      <a class="list-group-item list-group-item-action active" data-toggle="list" asp-action="Edit" asp-route-id="@Model.Id" role="tab" aria-controls="settings">Edit Profile</a>
       <a class="list-group-item list-group-item-action" href="" role="tab" aria-controls="settings" data-toggle="modal" data-target="#deletemodal">Delete Account</a>
       <a class="list-group-item list-group-item-action" href="" role="tab" aria-controls="settings">Sign out</a>  
     </div>
@@ -128,7 +133,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Discard</button>
-        <button type="button" class="btn btn-danger">Delete</button>
+        <a role="button" type="submit" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>
       </div>
     </div>
   </div>
