--- a/SmartTech/Views/Admin/Detail.cshtml
+++ b/SmartTech/Views/Admin/Detail.cshtml
@@ -37,8 +37,8 @@
                 </div>
                 @if (@Model.Active)
                 {
-                    <hr/>
-                    <h5 class="card-title text-primary">Employement Information</h5>
+                    
+                    <h5 class="card-title text-primary mt-3">Employement Information</h5>
                     <hr/>
                     <div class="row">
                         <div class="col-md-6">
