--- a/SmartTech/Views/Account/Profile.cshtml
+++ b/SmartTech/Views/Account/Profile.cshtml
@@ -1,12 +1,12 @@
 ﻿@model ProfileViewModel
 
 
-<div class="profile" style="position: absolute;
-                                      top: 0;
+<div class="profile mb-5" style="position: absolute;
+                                      top: 0; margin-bottom: 50px;
                                       left: 0; padding: 40px;
                                       background-color: #ffffff;
                                       width: 100%;">
-    <div class="row mt-5">
+    <div class="row my-5">
         <div class="col-md-9 order-2 order-md-1">
             <div class="card">
             
@@ -39,8 +39,8 @@
                     </div>
                     @if (@Model.Active)
                     {
-                        <hr/>
-                        <h5 class="card-title text-primary">Employement Information</h5>
+                       
+                        <h5 class="card-title text-primary mt-3">Employement Information</h5>
                         <hr/>
                         <div class="row">
                             <div class="col-md-6">
@@ -69,7 +69,7 @@
                 <a class="list-group-item list-group-item-action" href="" role="tab" aria-controls="messages">Leave Request</a>
                 <a class="list-group-item list-group-item-action" asp-action="Edit" asp-route-id="@Model.Id" role="tab" aria-controls="settings">Edit Profile</a>
                 <a class="list-group-item list-group-item-action" href="" role="tab" aria-controls="settings" data-toggle="modal" data-target="#deletemodal">Delete Account</a>
-                <a class="list-group-item list-group-item-action" href="" role="tab" aria-controls="settings">Sign out</a>
+                <a class="list-group-item list-group-item-action" role="tab" aria-controls="settings" asp-action="Logout">Sign out</a>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                Dear @Model.FirstName @Model.LastName are you want to procede deleting your account??
+                Dear @Model.FirstName @Model.LastName are you sure you want to procede deleting your account?
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Discard</button>
