--- a/SmartTech/Views/Admin/AdminEdit.cshtml
+++ b/SmartTech/Views/Admin/AdminEdit.cshtml
@@ -1,13 +1,18 @@
-﻿@model SmartTech.Models.Account.EditViewModel
+﻿@model AdminEditViewModel
 
-<div class="row my-5 px-5">
-  <div class="col-md-9 order-2 px-5 order-md-1">
-  <div class="card">
+@{
+    Layout = "Layout";
+}
+
+<div class="row my-5" id="">
+    <div class="col-md-10 offset-md-1 mt-1">
+        <div class="card">
             
-    <h5 class="card-header text-primary" style="height: 40px; padding-top: 8px">Edit Personal Information</h5>
+            <h5 class="card-header text-primary" style="height: 40px; padding-top: 8px">Edit Account Information</h5>
           
-    <div class="card-body">
-      <form method="post" asp-controller="Account" asp-action="Edit" asp-route-id="@Model.Id" id="register" enctype="multipart/form-data">
+            <div class="card-body">
+                
+        <form method="post" asp-controller="Admin" asp-action="AdminEdit" asp-route-id="@Model.Id" id="register" enctype="multipart/form-data">
         <div asp-validation-summary="All"></div>
         <div class="row">
           <div class="col-md-6 mb-3 input-group-sm">
@@ -97,44 +102,12 @@
 
         <hr class="mb-4">
         <button class="btn btn-primary btn-sm btn-block" type="submit">Update</button>
-      </form>
-    </div>
-    </div>
-  </div>
-  
-  
-  <div class="col-md-3 order-1 order-md-2">
-    <div class="list-group" id="list-tab" role="tablist">
-      <a class="list-group-item list-group-item-action" asp-action="Profile" asp-route-id="@Model.Id" role="tab" aria-controls="home">Profile</a>
-      <a class="list-group-item list-group-item-action" href="" role="tab" aria-controls="profile">Payment History</a>
-      <a class="list-group-item list-group-item-action" href="" role="tab" aria-controls="messages">Leave Request</a>
-      <a class="list-group-item list-group-item-action active" data-toggle="list" asp-action="Edit" asp-route-id="@Model.Id" role="tab" aria-controls="settings">Edit Profile</a>
-      <a class="list-group-item list-group-item-action" href="" role="tab" aria-controls="settings" data-toggle="modal" data-target="#deletemodal">Delete Account</a>
-      <a class="list-group-item list-group-item-action" role="tab" aria-controls="settings" asp-action="Logout">Sign out</a> 
-    </div>
-  </div>
+      </form>  
+               
+               
+            </div>
+        </div>
 
+    </div>
 </div>
 
-
-
-
-<div class="modal fade" id="deletemodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Delete Account</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        Dear @Model.FirstName @Model.LastName are you sure you want to procede deleting your account?
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Discard</button>
-        <a role="button" type="submit" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>
-      </div>
-    </div>
-  </div>
-</div>
