--- a/SmartTech/Views/Admin/Index.cshtml
+++ b/SmartTech/Views/Admin/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "Layout";
 }
 
-<div class="row mt-5">
+<div class="row my-5">
     <div class="col-md-12 pt-3">
         <ul class="tabs list-inline" style="background-color: #ededed;">
             <li class="current" data-tab="all"><strong>All</strong></li>
