--- a/SmartTech/wwwroot/css/dashboard.css
+++ b/SmartTech/wwwroot/css/dashboard.css
@@ -1,6 +1,16 @@
 body {
     font-size: .875rem;
 }
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    
+    max-height: 40px;
+    line-height: 40px;
+    background-color: #f5f5f5;
+}
 
 .feather {
     width: 16px;
