--- a/SmartTech/wwwroot/css/site.css
+++ b/SmartTech/wwwroot/css/site.css
@@ -8,6 +8,16 @@ body{
     background-color: #fff;
 
 }
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+   
+    max-height: 40px;
+    line-height: 40px; 
+    background-color: #f5f5f5;
+}
 .container {
     max-width: 960px;
 }
